// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GoogleMapReacts /> render if \`getCenter\` returns a value if \`props.isShowingApproximateLocation\` is \`true\` should render the right structure 1`] = `
<Component
  bootstrapURLKeys={
    Object {
      "key": "some key",
    }
  }
  bounds={null}
  center="some center"
  onChange={[Function]}
  onDrag={[Function]}
  onZoomAnimationEnd={[Function]}
  options={
    Object {
      "some": "options ",
    }
  }
  zoom={13}
>
  <GoogleMapMarker
    imageSrc="http://i1.cdbcdn.com/images/google-maps-approximate-location.png"
    lat={1}
    lng={0}
    style={
      Object {
        "transform": "translate(-50%, -50%)",
      }
    }
  />
</Component>
`;

exports[`<GoogleMapReacts /> render if \`getCenter\` returns a value if \`props.isShowingExactLocation\` is \`true\` should render the right structure 1`] = `
<Component
  bootstrapURLKeys={
    Object {
      "key": "some key",
    }
  }
  bounds={null}
  center="some center"
  onChange={[Function]}
  onDrag={[Function]}
  onZoomAnimationEnd={[Function]}
  options={
    Object {
      "some": "options ",
    }
  }
  zoom={13}
>
  <GoogleMapMarker
    imageSrc="https://maps.gstatic.com/mapfiles/api-3/images/spotlight-poi2.png"
    lat={1}
    lng={0}
    style={
      Object {
        "transform": "translate(-50%, -100%)",
      }
    }
  />
</Component>
`;

exports[`<GoogleMapReacts /> render if \`getCenter\` returns a value if \`props.markers\` is populated should render the right structure 1`] = `
<Component
  bootstrapURLKeys={
    Object {
      "key": "some key",
    }
  }
  bounds={null}
  center="some center"
  onChange={[Function]}
  onDrag={[Function]}
  onZoomAnimationEnd={[Function]}
  options={
    Object {
      "some": "options ",
    }
  }
  zoom={13}
>
  <div
    key="a"
    lat={41.38}
    lng={2.15}
  />
  <div
    key="b"
    lat={41.375}
    lng={2.16}
  />
</Component>
`;

exports[`<GoogleMapReacts /> render if \`getCenter\` returns a value should render the right structure 1`] = `
<Component
  bootstrapURLKeys={
    Object {
      "key": "some key",
    }
  }
  bounds={null}
  center="some center"
  onChange={[Function]}
  onDrag={[Function]}
  onZoomAnimationEnd={[Function]}
  options={
    Object {
      "some": "options ",
    }
  }
  zoom={13}
/>
`;
